--- a/views/Signin.hbs
+++ b/views/Signin.hbs
@@ -11,62 +11,49 @@
         <link rel="stylesheet" href="design_files/fonts/material-design-iconic-font/css/material-design-iconic-font.min.css">
                 
                 <!-- STYLE CSS -->
-        <link rel="stylesheet" href="design_files/css/style.css">
+        <link rel="stylesheet" href="/public/css/styles.css">
     </head>
     <body>
-        
-        
-        <div class="wrapper" style="background-image: url('design_files/images/background.jpg')">
-        <div class="inner">
-        <div class="image-holder">
-            <img src="design_files/images/login.jpg">
+	<!-- Main Content -->
+        <div class="container-fluid">
+            <div class="row main-content bg-success text-center">
+                <div class="col-md-4 text-center company__info">
+                    <span class="company__logo"><h2><span class="fa fa-android"></span></h2></span>
+                    <h4 class="company_title">Your Company Logo</h4>
+                </div>
+                <div class="col-md-8 col-xs-12 col-sm-12 login_form ">
+                    <div class="container-fluid">
+                        <div class="row">
+                            <h2>Log In</h2>
+                        </div>
+                        <div class="row">
+                            <form control="" class="form-group">
+                                <div class="row">
+                                    <input type="text" name="username" id="username" class="form__input" placeholder="Username">
+                                </div>
+                                <div class="row">
+                                    <!-- <span class="fa fa-lock"></span> -->
+                                    <input type="password" name="password" id="password" class="form__input" placeholder="Password">
+                                </div>
+                                <div class="row">
+                                    <input type="checkbox" name="remember_me" id="remember_me" class="">
+                                    <label for="remember_me">Remember Me!</label>
+                                </div>
+                                <div class="row">
+                                    <input type="submit" value="Submit" class="btn">
+                                </div>
+                            </form>
+                        </div>
+                        <div class="row">
+                            <p>Don't have an account? <a href="#">Register Here</a></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-        <form action="">
-            <h3>Login</h3>
-            <div class="form-wrapper">
-                <input id="email" type="email" placeholder="Email Address" class="form-control">
-                <i class="zmdi zmdi-email"></i>
-            </div>
-            <div class="form-wrapper">
-                <input id="password" type="password" placeholder="Password" class="form-control">
-                <i class="zmdi zmdi-lock"></i>
-            </div>
-            
-            <div class="form-group container-login100-form-btn">
-                <button id="btn-login" type="button">
-                    Login
-                    <i class="zimdi zimdi-arrow-right"></i>
-                </button>
-            </div>
-            <div class="w-full text-center p-t-27 p-b-239">
-                <span class="text-muted">
-                    Forgot
-                </span>
-                <a href="forgetPassword.html" class="text-dark">
-                    Username / Password?
-                </a>
-            </div>
-
-            <div class="w-full text-center" style="margin-top: 21%; font-size: 15px;">
-                <a href="signup.html" class="text-dark">
-                    Not have an account? Sign Up
-                </a>
-            </div>
-        </form>
+        <!-- Footer -->
+        <div class="container-fluid text-center footer">
+            Coded with &hearts; by <a href="https://bit.ly/yinkaenoch">Yinka.</a></p>
         </div>
-       <script src="js/index.js"></script>
-       <script>
-           firebase.auth().onAuthStateChanged(function(user)
-           {
-               if(user){
-                   window.location.href = "home.html"
-               }
-
-           });
-       </script>
-        
-
-
-
     </body>
 </html>
