--- a/views/Signup.hbs
+++ b/views/Signup.hbs
@@ -8,16 +8,16 @@
             
             
             <!-- MATERIAL DESIGN ICONIC FONT -->
-        <link rel="stylesheet" href="design_files/fonts/material-design-iconic-font/css/material-design-iconic-font.min.css">
+        <link rel="stylesheet" href="/design_files/fonts/material-design-iconic-font/css/material-design-iconic-font.min.css">
                 
                 <!-- STYLE CSS -->
-        <link rel="stylesheet" href="design_files/css/style.css">
+        <link rel="stylesheet" href="/design_files/css/style.css">
     </head>
     <body>
-        <div class="wrapper" style="background-image: url('design_files/images/background.jpg')">
+        <div class="wrapper" style="background-image: url('/design_files/images/background.jpg')">
         <div class="inner">
         <div class="image-holder">
-            <img src="design_files/images/edited1.jpg">
+            <img src="/design_files/images/edited1.jpg">
         </div>
         <form action="">
             <h3>Register</h3>
@@ -44,7 +44,7 @@
                 </button>
             </div>
             <div class="w-full text-center" style="margin-top: 49%; font-size: 15px;">
-                <a href="Signin.html" class="text-dark">
+                <a href="login" class="text-dark">
                     Already have an account?
                 </a>
             </div>
