--- a/views/Signin.hbs
+++ b/views/Signin.hbs
@@ -8,18 +8,18 @@
             
             
             <!-- MATERIAL DESIGN ICONIC FONT -->
-        <link rel="stylesheet" href="design_files/fonts/material-design-iconic-font/css/material-design-iconic-font.min.css">
+        <link rel="stylesheet" href="/design_files/fonts/material-design-iconic-font/css/material-design-iconic-font.min.css">
                 
                 <!-- STYLE CSS -->
-        <link rel="stylesheet" href="design_files/css/style.css">
+        <link rel="stylesheet" href="/design_files/css/style.css"> 
     </head>
     <body>
         
         
-        <div class="wrapper" style="background-image: url('design_files/images/background.jpg')">
+        <div class="wrapper" style="background-image: url('/design_files/images/background.jpg')">
         <div class="inner">
         <div class="image-holder">
-            <img src="design_files/images/login.jpg">
+            <img src="/design_files/images/login.jpg">
         </div>
         <form action="">
             <h3>Login</h3>
@@ -48,25 +48,12 @@
             </div>
 
             <div class="w-full text-center" style="margin-top: 21%; font-size: 15px;">
-                <a href="signup.html" class="text-dark">
+                <a href="userRegistration" class="text-dark">
                     Not have an account? Sign Up
                 </a>
             </div>
         </form>
         </div>
-       <script src="js/index.js"></script>
-       <script>
-           firebase.auth().onAuthStateChanged(function(user)
-           {
-               if(user){
-                   window.location.href = "home.html"
-               }
-
-           });
-       </script>
-        
-
-
-
+       <script src="/js/index.js"></script>
     </body>
 </html>
