--- a/views/etu/home.hbs
+++ b/views/etu/home.hbs
@@ -23,7 +23,7 @@
                 <a class="nav-link active" aria-current="page" href="/etu/home">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/nurse/register">ETU Assessment</a>
+                <a class="nav-link" href="/etu/etuform">ETU Assessment</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/nurse/checkup">Apply Request</a>
