--- a/views/etu/etuform.hbs
+++ b/views/etu/etuform.hbs
@@ -62,7 +62,7 @@
                             <br>
 
                             <div class="col-md-3 form-check form-check-inline">
-                              <input name="observation" class="form-check-input" type="checkbox" id="inlineCheckbox1" value='"Looks Ill"'>
+                              <input name="observation" class="form-check-input" type="checkbox" id="inlineCheckbox1" value="Looks Ill">
                               <label class="form-check-label" for="inlineCheckbox1">Looks Ill</label>
                             </div>
                             <div class="col-md-3 form-check form-check-inline">
@@ -115,12 +115,6 @@
                             <option>V</option>
                             <option>M</option>
                             </select>
-                        </div>
-
-                    
-                        <div class="col-12">
-                            <label for="inputAddress" class="form-label">Examined Doctor</label>
-                            <input name="etu_doc" type="text" class="form-control" id="inputAddress" required>
                         </div>
 
                         <div class="col-12">
