db updated n etu form

--- a/views/etu/etuform.hbs
+++ b/views/etu/etuform.hbs
@@ -122,7 +122,7 @@
 
                         <div class="input-group mb-3">
                           <div class="input-group-text">
-                            <input name="test_depts" class="form-check-input mt-0" type="checkbox" value="Blood Bank" aria-label="Checkbox for following text input">
+                            <input name="test_depts" class="form-check-input mt-0" type="checkbox" value="3" aria-label="Checkbox for following text input">
                           </div>
                           <label class="input-group-text" for="inputGroupSelect01">Blood Bank</label>
                           <select name="test_depts" class="form-select" id="inputGroupSelect01">
@@ -135,7 +135,7 @@
 
                         <div class="input-group mb-3">
                           <div class="input-group-text">
-                            <input name="test_depts" class="form-check-input mt-0" type="checkbox" value="ECG Department" aria-label="Checkbox for following text input">
+                            <input name="test_depts" class="form-check-input mt-0" type="checkbox" value="4" aria-label="Checkbox for following text input">
                           </div>
                           <label class="input-group-text" for="inputGroupSelect01">ECG Department</label>
                           <select name="test_depts" class="form-select" id="inputGroupSelect01">
@@ -148,7 +148,7 @@
 
                         <div class="input-group mb-3">
                           <div class="input-group-text">
-                            <input name="test_depts" class="form-check-input mt-0" type="checkbox" value="Biology Department" aria-label="Checkbox for following text input">
+                            <input name="test_depts" class="form-check-input mt-0" type="checkbox" value="5" aria-label="Checkbox for following text input">
                           </div>
                           <label class="input-group-text" for="inputGroupSelect01">Biology Department</label>
                           <select name="test_depts" class="form-select" id="inputGroupSelect01">
@@ -161,7 +161,7 @@
 
                         <div class="input-group mb-3">
                           <div class="input-group-text">
-                            <input name="test_depts" class="form-check-input mt-0" type="checkbox" value="Radiology Department" aria-label="Checkbox for following text input">
+                            <input name="test_depts" class="form-check-input mt-0" type="checkbox" value="6" aria-label="Checkbox for following text input">
                           </div>
                           <label class="input-group-text" for="inputGroupSelect01">Radiology Department</label>
                           <select name="test_depts" class="form-select" id="inputGroupSelect01">
@@ -174,7 +174,7 @@
 
                         <div class="input-group mb-3">
                           <div class="input-group-text">
-                            <input name="test_depts" class="form-check-input mt-0" type="checkbox" value="Chemical Pathology" aria-label="Checkbox for following text input">
+                            <input name="test_depts" class="form-check-input mt-0" type="checkbox" value="7" aria-label="Checkbox for following text input">
                           </div>
                           <label class="input-group-text" for="inputGroupSelect01">Chemical Pathology</label>
                           <select name="test_depts" class="form-select" id="inputGroupSelect01">
