--- a/views/nurse/checkup.hbs
+++ b/views/nurse/checkup.hbs
@@ -7,6 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
 
     <title>Complete Checkup</title>
   </head>
@@ -20,20 +21,30 @@
             <a class="navbar-brand" href="#">DGH-Mathara</a>
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/nurse/home">Home</a>
+                <a class="nav-link" aria-current="page" href="/nurse/home">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/nurse/register">Patient Register</a>
               </li>
+                <li class="nav-item">
+                <a class="nav-link" href="/nurse/viewPatient">View Patient</a>
+              </li>
               <li class="nav-item">
-                <a class="nav-link" href="/nurse/checkup">Complete Checkup</a>
+                <a class="nav-link active" href="/nurse/checkup">Complete Checkup</a>
               </li>
               
             </ul>
-            <form class="d-flex">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
+           <ul class="navbar-nav ms-auto">
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      <i class="fas fa-user-circle"></i>&nbsp;UserName
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                      <li><a class="dropdown-item" href="/logOut"><i class="fas fa-sign-out-alt"></i>&nbsp;Log Out</a></li>
+                      <li><a class="dropdown-item" href="/user/userRegistration"><i class="fas fa-user-plus"></i>&nbsp;Sign Up</a></li>
+                    </ul>
+                </li>
+            </ul>
           </div>
         </div>
       </nav>
