--- a/views/nurse/home.hbs
+++ b/views/nurse/home.hbs
@@ -7,6 +7,8 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+
 
     <title>Nurse Home</title>
   </head>
@@ -25,15 +27,25 @@
               <li class="nav-item">
                 <a class="nav-link" href="/nurse/register">Patient Register</a>
               </li>
+               <li class="nav-item">
+                <a class="nav-link" href="/nurse/viewPatient">View Patient</a>
+              </li>
               <li class="nav-item">
                 <a class="nav-link" href="/nurse/checkup">Complete Checkup</a>
               </li>
-              
             </ul>
-            <form class="d-flex">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      <i class="fas fa-user-circle"></i>&nbsp;UserName
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                      <li><a class="dropdown-item" href="/logOut"><i class="fas fa-sign-out-alt"></i>&nbsp;Log Out</a></li>
+                      <li><a class="dropdown-item" href="/user/userRegistration"><i class="fas fa-user-plus"></i>&nbsp;Sign Up</a></li>
+                    </ul>
+                </li>
+            </ul>
+            </div>
           </div>
         </div>
       </nav>
