--- a/views/etu/home.hbs
+++ b/views/etu/home.hbs
@@ -17,7 +17,7 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-            <a class="navbar-brand" href="#">DGH-Mathara</a>
+            <a class="navbar-brand" href="#">DGH</a>
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="/etu/home">Home</a>
@@ -42,7 +42,7 @@
       <div class="bg-secondary p-5 rounded-lg m-3" style="background-image: url('/design_files/images/hos.jpg'); background-size: cover;">
         <h1 class="display-4 text-light fw-bold">A Warm Welcome</h1>
         <hr class="my-4">
-        <h4 class="text-light">Welcome to ETU Department | District General Hospital - Mathara.</h4>
+        <h4 class="text-light">Welcome to ETU Department | District General Hospital.</h4>
       </div>
 
 
