--- a/views/nurse/viewPatient.hbs
+++ b/views/nurse/viewPatient.hbs
@@ -18,7 +18,7 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-            <a class="navbar-brand" href="#">DGH-Mathara</a>
+            <a class="navbar-brand" href="#">DGH</a>
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
                 <a class="nav-link" aria-current="page" href="/nurse/home">Home</a>
@@ -86,7 +86,7 @@
                         </div>
                         <div class="col-md-8">
                             <label for="validationDefault01" class="form-label">Name</label>
-                            <input name="name" type="text" class="form-control" id="validationDefault01" required value={{patient.name}}>
+                            <input name="name" type="text" class="form-control" id="validationDefault01" required value="{{patient.name}}">
                         </div>
                         {{!-- <div class="col-md-5">
                             <label for="validationDefault02" class="form-label">Last name</label>
@@ -100,8 +100,8 @@
                         </div>
                         <div class="col-md-3">
                             <label for="validationDefault04" class="form-label">Gender</label>
-                            <select name="gender" class="form-select" id="validationDefault04" required value={{patient.gender}}>
-                            <option selected disabled value="">Choose...</option>
+                            <select name="gender" class="form-select" id="validationDefault04" required >
+                            <option selected disabled value="">{{patient.gender}}</option>
                             <option>M</option>
                             <option>F</option>
                             {{!-- <option>Other</option> --}}
@@ -109,8 +109,8 @@
                         </div>
                         <div class="col-md-3">
                             <label for="validationDefault04" class="form-label">Marital Status</label>
-                            <select name="marital_status" class="form-select" id="validationDefault04" required value={{patient.marital_status}}>
-                            <option selected disabled value="">Choose...</option>
+                            <select name="marital_status" class="form-select" id="validationDefault04" required >
+                            <option selected disabled value="">{{patient.marital_status}}</option>
                             <option>S</option>
                             <option>M</option>
                             </select>
@@ -118,7 +118,7 @@
 
                         <div class="col-md-12">
                             <label for="validationDefault01" class="form-label">Patient Address</label>
-                            <input name="adrs" type="text" class="form-control" id="validationDefault01"  required value={{patient.adrs}}>
+                            <input name="adrs" type="text" class="form-control" id="validationDefault01"  required value="{{patient.adrs}}">
                         </div>
                         {{!-- <div class="col-md-6">
                             <label for="validationDefault02" class="form-label">Registered Date</label>
@@ -127,12 +127,12 @@
 
                         <div class="col-12">
                             <label for="inputAddress" class="form-label">Gurdian Name</label>
-                            <input name="gdn_name" type="text" class="form-control" id="inputAddress" required value={{patient.gdn_name}}>
+                            <input name="gdn_name" type="text" class="form-control" id="inputAddress" required value="{{patient.gdn_name}}">
                         </div>
 
                         <div class="col-12">
                         <label for="inputAddress2" class="form-label">Guardian Address</label>
-                        <input name="gdn_adrs" type="text" class="form-control" id="inputAddress2" value={{patient.gdn_adrs}}>
+                        <input name="gdn_adrs" type="text" class="form-control" id="inputAddress2" value="{{patient.gdn_adrs}}">
                         </div>
                     </form>
                     </div>
