--- a/views/nurse/viewPatient.hbs
+++ b/views/nurse/viewPatient.hbs
@@ -9,6 +9,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
 
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="/stylesheets/style.css"> 
+
+
     <title>Patient Register</title>
   </head>
   <body>
@@ -40,7 +44,7 @@
                       <i class="fas fa-user-circle"></i>&nbsp;UserName
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                      <li><a class="dropdown-item" href="/logOut"><i class="fas fa-sign-out-alt"></i>&nbsp;Log Out</a></li>
+                      <li><a class="dropdown-item" href="/user/login"><i class="fas fa-sign-out-alt"></i>&nbsp;Log Out</a></li>
                       <li><a class="dropdown-item" href="/user/userRegistration"><i class="fas fa-user-plus"></i>&nbsp;Sign Up</a></li>
                     </ul>
                 </li>
@@ -65,6 +69,11 @@
                             <button class="btn btn-primary" type="submit">Check</button>
                         </div>
                     </form>
+                    
+                     <div class="row">
+                            <div class="col"><hr></div>  
+                      </div>
+
                     <form method="POST" action="/nurse/register" class="row g-3">   
                         <div class="col-md-6">
                             <label for="validationDefault01" class="form-label">Patient NIC Number</label>
