Changes considering to new design

--- a/views/Signup.hbs
+++ b/views/Signup.hbs
@@ -26,19 +26,23 @@
                 <i class="zmdi zmdi-email"></i>
             </div>
             <div class="form-wrapper">
-                <input id="department" name = "user_name" type="string" placeholder="User Name" class="form-control">
+                <input id="department" name = "name" type="string" placeholder="User Name" class="form-control">
                 <i class="zmdi zmdi-email"></i>
             </div>
             <div class="form-wrapper">
-                <input id="password"  type="password" placeholder="Password" class="form-control">
+                <input id="password" name="password" type="password" placeholder="Password" class="form-control">
                 <i class="zmdi zmdi-lock"></i>
             </div>
-            <div class="form-wrapper">
+            {{!-- <div class="form-wrapper">
                 <input id="confirm password" name ="pswrd" type="password" placeholder="Confirm Password" class="form-control">
                 <i class="zmdi zmdi-lock"></i>
+            </div> --}}
+            <div class="form-wrapper">
+                <input id="role" name='role' type="string" placeholder="Role ID" class="form-control">
+                <i class="zmdi zmdi-email"></i>
             </div>
             <div class="form-wrapper">
-                <input id="email" name='role_id' type="number" placeholder="Role ID" class="form-control">
+                <input id="department" name='departmentId' type="number" placeholder="Department ID" class="form-control">
                 <i class="zmdi zmdi-email"></i>
             </div>
             <div class="form-group container-login100-form-btn">
