--- a/views/Signin.hbs
+++ b/views/Signin.hbs
@@ -28,7 +28,7 @@
                 <i class="zmdi zmdi-email"></i>
             </div>
             <div class="form-wrapper">
-                <input id="password" name="pswrd" type="password" placeholder="Password" class="form-control">
+                <input id="password" name="password" type="password" placeholder="Password" class="form-control">
                 <i class="zmdi zmdi-lock"></i>
             </div>
             
