--- a/views/nurse/checkup.hbs
+++ b/views/nurse/checkup.hbs
@@ -62,7 +62,7 @@
                     <form method="POST" class="row g-3" action="/nurse/checkup">   
                         <div class="col-md-6">
                             <label for="validationDefault01" class="form-label">Patient NIC Number</label>
-                            <input name="nic" type="text" class="form-control" id="validationDefault01" required>
+                            <input name="patientNic" type="text" class="form-control" id="validationDefault01" required>
                         </div>
                         <div class="col-md-6">
                             <label for="validationDefault02" class="form-label">Visit Date</label>
