--- a/views/departments/request.hbs
+++ b/views/departments/request.hbs
@@ -49,7 +49,7 @@
       </nav>
 
       <div class="p-2 m-3 d-flex justify-content-center ">
-      <form method="GET" action = " /dpt/viewReqs?nic=199721003446" class="row g-3">
+      <form method="GET" action = "/dpt/viewReqs" class="row g-3">
         <div class="col-auto">
           <input type="text" readonly class="form-control-plaintext" id="staticEmail2" value="Enter Patient NIC">
         </div>
@@ -109,11 +109,6 @@
       </div>
     </div>
 
-    {{#if data.problem.message}}
-       <div class="d-flex justify-content-center"><p class="text-danger fw-bold">{{data.problem.message}}</p></div>
-    {{/if}}
-
-
       <div class="p-3 m-3">
       <div class="table-responsive table-success table-striped">
         <table class="table">
@@ -139,12 +134,14 @@
                     <td>{{this.etuformId}}</td>
                     <td>{{this.test_type}}</td>
                     <td>{{this.special_note}}</td>
-                    <td>Gayan Bob</td>
+                    <td>{{this.doctorId}}</td>
                     <td>
-                      <button type="button" class="btn btn-success"  data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+                      <button type="button" class="btn btn-success"  data-bs-toggle="modal" data-bs-target="#staticBackdrop1">
                         <i class="fas fa-check-circle"></i> &nbsp; Accept
                       </button>
-                        <button type="button" class="btn btn-danger"><i class="fas fa-times-circle"></i> &nbsp; Decline</button>
+                      <button type="button" class="btn btn-danger"  data-bs-toggle="modal" data-bs-target="#staticBackdrop2">
+                        <i class="fas fa-times-circle"></i> &nbsp; Decline
+                      </button>
                     </td>
                 </tr>
 
@@ -156,8 +153,8 @@
       </div>
     </div>   
 
-     <!-- Modal -->
-        <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+     <!-- Modal 1 -->
+        <div class="modal fade" id="staticBackdrop1" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
           <div class="modal-dialog">
             <div class="modal-content">
               <div class="modal-header">
@@ -201,11 +198,44 @@
           </div>
         </div>
 
+        {{!-- Modal 1 ends --}}
+
+       <!-- Modal 2 -->
+        <div class="modal fade" id="staticBackdrop2" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="staticBackdropLabel">Confirm Decline</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+
+              <form method="POST" action="/upload/formData/1">   
+
+              <div class="modal-body">
+                <div class="input-group mb-3">
+                  <span class="input-group-text" id="basic-addon1">Test Status</span>
+                  <input name="test_status" type="text" class="form-control" aria-label="diagnosis" aria-describedby="basic-addon1" value="Completed">
+                </div>
+
+                <div class="modal-footer">
+                  <button type="submit" class="btn btn-primary">Confirm</button>
+                  <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cancle</button>
+                </div>
+
+              </form>
+
+            </div>
+          </div>
+        </div>
+
+        {{!-- Modal 2 ends --}}
+
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
-
+    <script src = "/js/api.js"></script>
+    <script src = "/js/request.js"></script>
     <!-- Option 2: Separate Popper and Bootstrap JS -->
     <!--
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous"></script>
