--- a/views/departments/radiology_home.hbs
+++ b/views/departments/radiology_home.hbs
@@ -8,13 +8,11 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
-
-    <!-- Custom CSS -->
+    
+     <!-- Custom CSS -->
     <link rel="stylesheet" href="/stylesheets/style.css"> 
 
-
-
-    <title>ECG Department</title>
+    <title>Radiology Department Home</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -26,10 +24,10 @@
             <a class="navbar-brand" href="#">DGH</a>
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/nurse/home">Home</a>
+                <a class="nav-link active" aria-current="page" href="/dpt/radiology_dept_home">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/nurse/register">Test Request</a>
+                <a class="nav-link" href="/dpt/request">Test Requests</a>
               </li>
             </ul>
             <ul class="navbar-nav ms-auto">
@@ -52,7 +50,7 @@
       <div class="bg-secondary p-5 rounded-lg m-3" style="background-image: url('/design_files/images/hos.jpg'); background-size: cover;">
         <h1 class="display-4 text-light fw-bold">A Warm Welcome</h1>
         <hr class="my-4">
-        <h4 class="text-light">Welcome to ECG Department.</h4>
+        <h4 class="text-light">Welcome to Department of Radiology| District General Hospital.</h4>
       </div>
 
 
