--- a/views/departments/request.hbs
+++ b/views/departments/request.hbs
@@ -70,6 +70,10 @@
         <div class="d-flex justify-content-center"><p class="text-danger fw-bold">{{error.message}}</p></div>
     {{/if}}
 
+    {{#if success.message}}
+        <div class="d-flex justify-content-center"><p class="text-danger fw-bold">{{success.message}}</p></div>
+    {{/if}}
+
   
 
     <div class="p-1 m-3">
@@ -162,26 +166,20 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
               </div>
 
-              <form method="PUT" action="/upload/formData/1">   
-
+              <form method="POST" action="/upload/formData{{reqId}}" enctype="multipart/form-data">   
               <div class="modal-body">
 
                 <div class="input-group mb-3">
-                  <span class="input-group-text" id="basic-addon1">Test Num</span>
-                  <input name="formdata" type="number" class="form-control" aria-label="test" aria-describedby="basic-addon1">
+                  <span class="input-group-text" id="basic-addon1">Request Id</span>
+                  <input name="reqId" type="number" class="form-control" aria-label="diagnosis" aria-describedby="basic-addon1">
                 </div>
 
                 <div class="input-group mb-3">
-                  <span class="input-group-text">Diagnosis</span>
-                  <textarea name="formdata" class="form-control" aria-label="With textarea"></textarea>
+                  <span class="input-group-text" id="basic-addon1">Test Status</span>
+                  <input name="test_status" type="text" class="form-control" aria-label="diagnosis" aria-describedby="basic-addon1" value="Completed">
                 </div>
 
-                <div class="input-group mb-3">
-                  <span class="input-group-text" id="basic-addon1">Treatment</span>
-                  <input name="test_status" type="text" class="form-control" aria-label="diagnosis" aria-describedby="basic-addon1">
-                </div>
-
-                  <div class="mb-3">
+                <div class="mb-3">
                     <label for="formFile" class="form-label">Test Report Attachment</label>
                     <input name = "attach" class="form-control" type="file" id="formFile">
                   </div>            
